@@ -1,3 +1,5 @@
+.. _updates-builders:
+
 ================
 Updates Builders
 ================
@@ -7,8 +9,6 @@ Updates Builders
    :backlinks: none
    :depth: 2
    :class: singlecol
-
-.. _updates-builders:
 
 Overview
 --------
