@@ -157,10 +157,25 @@ contains an added ``location`` field:
    :start-after: begin replaceDocumentsExample
    :end-before: end replaceDocumentsExample
 
+If multiple documents match the query filter specified in
+the ``ReplaceOneModel`` instance, the operation replaces the first
+result. You can specify a sort in a ``ReplaceOptions`` instance to apply
+an order to matched documents before the driver performs the replace
+operation, as shown in the following code:
+
+.. code-block:: java
+
+   ReplaceOptions options = ReplaceOptions.sort(Sorts.ascending("_id"));
+
 For more information about the methods and classes mentioned in this section,
 see the following resources:
 
-- `ReplaceOneModel <{+api+}/apidocs/mongodb-driver-core/com/mongodb/client/model/ReplaceOneModel.html>`__ API documentation
+- `ReplaceOneModel
+  <{+api+}/apidocs/mongodb-driver-core/com/mongodb/client/model/ReplaceOneModel.html>`__
+  API documentation
+- `ReplaceOptions
+  <{+api+}/apidocs/mongodb-driver-core/com/mongodb/client/model/ReplaceOptions.html>`__
+  API documentation
 - :manual:`Unique indexes </core/index-unique/>` Server Manual Explanation
 
 Update Operation
@@ -193,11 +208,28 @@ the ``age`` field in a document where the ``_id`` is ``2``:
    :start-after: begin updateDocumentsExample
    :end-before: end updateDocumentsExample
 
+If multiple documents match the query filter specified in
+the ``UpdateOneModel`` instance, the operation updates the first
+result. You can specify a sort in an ``UpdateOptions`` instance to apply
+an order to matched documents before the driver performs the update
+operation, as shown in the following code:
+
+.. code-block:: java
+
+   UpdateOptions options = UpdateOptions.sort(Sorts.ascending("_id"));
+
 For more information about the methods and classes mentioned in this section,
 see the following resources:
 
-- `UpdateOneModel <{+api+}/apidocs/mongodb-driver-core/com/mongodb/client/model/UpdateOneModel.html>`__ API documentation
-- `UpdateManyModel <{+api+}/apidocs/mongodb-driver-core/com/mongodb/client/model/UpdateManyModel.html>`__ API documentation
+- `UpdateOneModel
+  <{+api+}/apidocs/mongodb-driver-core/com/mongodb/client/model/UpdateOneModel.html>`__
+  API documentation
+- `UpdateManyModel
+  <{+api+}/apidocs/mongodb-driver-core/com/mongodb/client/model/UpdateManyModel.html>`__
+  API documentation
+- `UpdateOptions
+  <{+api+}/apidocs/mongodb-driver-core/com/mongodb/client/model/UpdateOptions.html>`__
+  API documentation
 - :manual:`unique indexes </core/index-unique/>` Server Manual Explanation
 
 Delete Operation
